fix list align

--- a/src/ui/selectListItem/selectListItem.module.scss
+++ b/src/ui/selectListItem/selectListItem.module.scss
@@ -25,6 +25,7 @@
         &--list {
             display: block;
             width: 40%;
+            text-align: right;
         }
     }
 
